All this to fix some spacing

--- a/resources/src/partials/elements.styl
+++ b/resources/src/partials/elements.styl
@@ -282,6 +282,9 @@ section.primary-footer
       padding 0
       flex 1 0 50%
 
+  .social-media
+    margin-top 25px
+
   .social-media, a
     color footer_link_color
 
